Improvements to DenyCipherSuiteFilterTest for clarity (hopefully)
Signed-off-by: Keith Wall <kwall@apache.org>